<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Editare_profil">

    <View
        android:id="@+id/icons8_head"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/nume"
        android:layout_width="52dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/salsa"
        android:gravity="top"
        android:text="@string/nume_profil"
        android:textAppearance="@style/nume_profil"
        app:layout_constraintBottom_toTopOf="@+id/ne_bucuram_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icons8_head"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/prenume"
        android:layout_width="73dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/salsa"
        android:gravity="top"
        android:text="@string/prenume_profil"
        android:textAppearance="@style/prenume_profil"
        app:layout_constraintBottom_toTopOf="@+id/ne_bucuram_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nume"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/ne_bucuram_"
        android:layout_width="286dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/salsa"
        android:gravity="top"
        android:text="@string/ne_bucuram_profil"
        android:textAppearance="@style/ne_bucuram_profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icons8_head"
        app:layout_constraintVertical_bias="0.874" />


</androidx.constraintlayout.widget.ConstraintLayout>