<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Buletin_vaccinare">

    <TextView
        android:id="@+id/ne_bucuram_"
        android:layout_width="228dp"
        android:layout_height="151dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/salsa"
        android:gravity="top"
        android:text="@string/intors"
        android:textAppearance="@style/intors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <View
        android:id="@+id/icons8_hear"
        android:layout_width="140dp"
        android:layout_height="141dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:background="@drawable/heart_masking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ne_bucuram_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/vaccinat_"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/salsa"
        android:gravity="top"
        android:text="@string/vaccinat_"
        android:textAppearance="@style/vaccinat_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ne_bucuram_"
        app:layout_constraintVertical_bias="0.077" />

    <View
        android:id="@+id/vaccinat"
        android:layout_width="113dp"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icons8_check_all_144_1"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/vaccinat_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <View
        android:id="@+id/nevaccinat"
        android:layout_width="105dp"
        android:layout_height="102dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/masca_protectie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccinat"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/daca_nu_te_"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/salsa"
        android:gravity="top"
        android:text="@string/daca_nu_te_"
        android:textAppearance="@style/daca_nu_te_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccinat_"
        app:layout_constraintVertical_bias="0.875" />

    <View
        android:id="@+id/clip_doctor"
        android:layout_width="152dp"
        android:layout_height="81dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/clip_doctor_sent_me_a_message_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/daca_nu_te_"
        app:layout_constraintTop_toBottomOf="@+id/nevaccinat"
        app:layout_constraintVertical_bias="0.772" />


</androidx.constraintlayout.widget.ConstraintLayout>